Multiple reimport support
- Lesson
- Materials
- Delete legacy UB specific logic
- Clean up leftovers
- Delete gems:
  - js-routes
  - pdfjs_viewer-rails

--- a/app/views/layouts/lcms/engine/gdoc.html.erb
+++ b/app/views/layouts/lcms/engine/gdoc.html.erb
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title><%= "#{t('ui.unbounded')} - #{page_title}" %></title>
-    <style type="text/css">
+    <style >
       <%= raw inlined_asset('lcms/engine/gdoc.css') %>
     </style>
   </head>
