--- a/lib/doc_template/templates/activity.html.erb
+++ b/lib/doc_template/templates/activity.html.erb
@@ -1,4 +1,4 @@
-<div class="o-ld-activity-wrapper <%= 'o-ld-activity-foundational-skills' if @tmpl[:foundational] %>"
+<div class="o-ld-activity-wrapper"
   data-id="<%= @tmpl[:activity].anchor %>"
   data-tag="<%= @tmpl[:placeholder] %>"
   <%= 'data-optional' if @tmpl[:activity].optional %>>
