--- a/app/views/lcms/engine/admin/documents/import.html.erb
+++ b/app/views/lcms/engine/admin/documents/import.html.erb
@@ -1,11 +1,17 @@
 <% set_page_title 'Bulk Import' %>
 
 <div class="container-fluid">
-  <h2 class="text-center">Import Documents</h2>
-
+  <h2 class="text-center p-4">Import Lessons</h2>
+  <hr>
   <div class="row">
-    <%= link_to '<- Back', lcms_engine.admin_documents_path, class: 'button primary' %>
+    <div class="cols-sm">
+      <%= link_to 'Back to list', lcms_engine.admin_documents_path, class: 'btn btn-success' %>
+    </div>
   </div>
-
-  <%= render_component('admin/ImportStatus', @props) %>
+  <hr>
+  <div class="row p-2">
+    <div class="col">
+      <%= render_component('ImportStatus', @props) %>
+    </div>
+  </div>
 </div>
