--- a/app/views/lcms/engine/admin/documents/new.html.erb
+++ b/app/views/lcms/engine/admin/documents/new.html.erb
@@ -1,21 +1,15 @@
 <div class="container-fluid">
-  <h2 class=text-center><%= t('.page_title') %></h2>
-
+  <h2 class="text-center p-4"><%= t('.page_title') %></h2>
   <hr>
-
   <div class="cols-sm">
     <%= link_to 'Back to list', lcms_engine.admin_documents_path, class: 'btn btn-success' %>
   </div>
-
   <hr>
-
   <div class="row">
-    <%= simple_form_for @document || DocumentForm.new, url: lcms_engine.admin_documents_path, data: { turbo: false } do |f| %>
+    <%= simple_form_for @document_form || DocumentForm.new, url: lcms_engine.admin_documents_path, data: { turbo: false } do |f| %>
       <%= f.input :link, error: f.object.errors[:link].first.try(:html_safe),
                   label: false, placeholder: t('ui.url') %>
       <p>
-      <%= params %>
-      <%= params[:async].to_i.zero? %>
       <%= f.check_box :async, checked: params[:async].to_i.zero? %>
       <span><small><%= t('ui.async') %></small></span>
       </p>
