--- a/app/views/lcms/engine/admin/resources/_form.html.erb
+++ b/app/views/lcms/engine/admin/resources/_form.html.erb
@@ -7,7 +7,7 @@
       <% if Lcms::Engine::Settings[:editing_enabled] %>
         <%= f.button :submit, t('ui.save'), name: nil, class: 'btn btn-primary' %>
         <% if @resource.persisted? %>
-          <%= link_to t('ui.delete'), lcms_engine.admin_resource_path(@resource), class: 'btn btn-danger', data: { confirm: t('ui.are_you_sure') }, method: :delete %>
+          <%= link_to t('ui.delete'), lcms_engine.admin_resource_path(@resource), class: 'btn btn-danger', data: { confirm: t('ui.are_you_sure'), 'turbo-method': :delete } %>
         <% end %>
       <% end %>
     </div>
