--- a/app/views/lcms/engine/admin/standards/index.html.erb
+++ b/app/views/lcms/engine/admin/standards/index.html.erb
@@ -26,7 +26,7 @@
               <td><%= std.subject %></td>
               <td><%= std.grades.join(', ') %></td>
               <td><%= std.alt_names.join(' / ') %></td>
-              <td><%= link_to t('ui.delete'), lcms_engine.admin_standard_path(std), class: 'btn btn-danger', data: { confirm: t('ui.are_you_sure') }, method: :delete %></td>
+              <td><%= link_to t('ui.delete'), lcms_engine.admin_standard_path(std), class: 'btn btn-danger', data: { confirm: t('ui.are_you_sure'), 'turbo-method': :delete } %></td>
             </tr>
           <% end %>
         <% end %>
