--- a/app/views/lcms/engine/documents/_content.html.erb
+++ b/app/views/lcms/engine/documents/_content.html.erb
@@ -2,7 +2,7 @@
 <div class="o-page__module u-bg--light c-ld u-padding-bottom--gutter">
   <div class="o-page__wrap--row" <%= 'data-ela' if document.ela? %>>
     <div id="c-ld-content" class="c-ld__body c-ld__body--general" <%= 'data-assessment' if document.assessment? %>>
-      <% if document.description.present? && !document.foundational? %>
+      <% if document.description.present? %>
         <h2>Summary</h2>
         <p><%= raw document.description %></p>
       <% end %>
