--- a/app/views/lcms/engine/documents/pdf/materials/show.html.erb
+++ b/app/views/lcms/engine/documents/pdf/materials/show.html.erb
@@ -1,11 +1,11 @@
-<style type="text/css">
+<style >
   <%= raw document.css_styles %>
 </style>
 <!-- TODO: this is quick fix for Oct 23, 2017 release. We do need to rethink this approach,
   at least move styles to css after merging https://github.com/learningtapestry/unbounded/pull/622
  -->
 <% if document.preserve_table_padding? %>
-  <style type="text/css">
+  <style >
     table td { padding: 5px; }
     table th { padding: 5px; }
   </style>
