--- a/app/views/lcms/engine/documents/show_lti.html.erb
+++ b/app/views/lcms/engine/documents/show_lti.html.erb
@@ -1,12 +1,7 @@
-<style type="text/css">
+<style >
   <%= raw(@document.css_styles) %>
 </style>
 
-<div class="c-ld-page-header cs-bg--<%= @document.color_code_grade %>">
-  <div class="container-fluid">
-    <%= render 'header', document: @document %>
-  </div>
-</div>
 <div class="u-bg--light">
   <div class="container-fluid o-page--ld c-ld--<%= @document.color_code_grade %> u-padding-bottom--gutter2x doc-subject-<%= @document.metadata['subject'].to_s.downcase %>" data-scroll="ld-page" id="ld-page">
     <%= render 'content', document: @document, lti: true %>
