--- a/app/views/lcms/engine/pages/not_found.html.erb
+++ b/app/views/lcms/engine/pages/not_found.html.erb
@@ -1,5 +1,5 @@
 <% set_page_title t('lcms.engine.pages.not_found.page_title') %>
 
-<div class="o-filterbar-title">
+<div>
   <h2><%= t('lcms.engine.pages.not_found.page_header') %></h2>
 </div>
