--- a/app/views/lcms/engine/admin/batch_reimports/new.html.erb
+++ b/app/views/lcms/engine/admin/batch_reimports/new.html.erb
@@ -1,11 +1,8 @@
 <% set_page_title 'Batch Reimport' %>
 
-<div class="container-fluid">
-
-  <h1 class="text-center">Select Resources to Reimport</h1>
-
+<div class="container-fluid o-adm-list o-adm-documents">
+  <h1 class="text-center p-4">Select Resources to Reimport</h1>
+  <hr>
   <%= render 'search_form' %>
-
-  <div class="row">
-  </div>
+  <hr>
 </div>
