--- a/app/views/lcms/engine/admin/documents/new.html.erb
+++ b/app/views/lcms/engine/admin/documents/new.html.erb
@@ -6,11 +6,12 @@
   </div>
   <hr>
   <div class="row">
-    <%= simple_form_for @document_form || DocumentForm.new, url: lcms_engine.admin_documents_path, data: { turbo: false } do |f| %>
+    <%= simple_form_for @document_form, url: lcms_engine.admin_documents_path, data: { turbo: false } do |f| %>
       <%= f.input :link, error: f.object.errors[:link].first.try(:html_safe),
                   label: false, placeholder: t('ui.url') %>
       <p>
-      <%= f.check_box :async, checked: params[:async].to_i.zero? %>
+      <%= f.check_box :async,
+                      checked: params.dig(:document_form, :async).nil? || params.dig(:document_form, :async).to_i.positive? %>
       <span><small><%= t('ui.async') %></small></span>
       </p>
       <%= f.button :submit, t('.submit'), class: 'btn btn-primary' %>
