--- a/app/views/lcms/engine/admin/standards/index.html.erb
+++ b/app/views/lcms/engine/admin/standards/index.html.erb
@@ -1,11 +1,18 @@
 <div class="container-fluid">
-
-  <h2 class=text-center>Standards</h2>
-
+  <h1 class="text-center p-4">Standards</h1>
+  <hr>
   <div class="row">
-    <%= render 'search_form' %>
+    <%= render 'import_form' %>
   </div>
-
+  <hr>
+  <div class="row">
+    <div class="col-sm-6">
+      <%= render 'search_form' %>
+    </div>
+    <div class="col-sm-6 d-flex justify-content-end">
+      <p><%= page_entries_info @standards %></p>
+    </div>
+  </div>
   <hr>
 
   <div class=row>
