--- a/app/views/lcms/engine/admin/documents/index.html.erb
+++ b/app/views/lcms/engine/admin/documents/index.html.erb
@@ -86,9 +86,7 @@
   </div>
 
   <div class="row">
-    <div class="'col-sm-12 text-center'">
-      <%= will_paginate @documents %>
-    </div>
+    <%= will_paginate @documents, list_classes: %w(pagination d-flex justify-content-center) %>
   </div>
 
 </div>
