--- a/app/views/lcms/engine/admin/materials/index.html.erb
+++ b/app/views/lcms/engine/admin/materials/index.html.erb
@@ -101,9 +101,7 @@
   </div>
 
   <div class="row">
-    <div class="col-sm-12 text-center">
-      <%= will_paginate @materials %>
-    </div>
+    <%= will_paginate @materials, list_classes: %w(pagination d-flex justify-content-center) %>
   </div>
 
 </div>
