--- a/app/views/lcms/engine/admin/standards/index.html.erb
+++ b/app/views/lcms/engine/admin/standards/index.html.erb
@@ -42,8 +42,6 @@
   </div>
 
   <div class="row">
-    <div class='col-sm-12 text-center'>
-      <%= will_paginate @standards %>
-    </div>
+    <%= will_paginate @standards, list_classes: %w(pagination d-flex justify-content-center) %>
   </div>
 </div>
