Fix fontawesome icons
The $fa-font-path in application.bootstrap.scss is updated from '/assets' to '/lcms-engine-assets/fonts' to correctly locate the font assets.

--- a/public/lcms-engine-assets/application.css
+++ b/public/lcms-engine-assets/application.css
@@ -479,6 +479,11 @@ progress {
   display: none !important;
 }
 
+.lead {
+  font-size: 1.25rem;
+  font-weight: 300;
+}
+
 .display-1 {
   font-size: calc(1.625rem + 4.5vw);
   font-weight: 300;
@@ -27660,7 +27665,7 @@ readers do not read off random characters that represent icons */
   font-style: normal;
   font-weight: 400;
   font-display: block;
-  src: url("/assets/fa-brands-400.woff2") format("woff2"), url("/assets/fa-brands-400.ttf") format("truetype");
+  src: url("/lcms-engine-assets/fonts/fa-brands-400.woff2") format("woff2"), url("/lcms-engine-assets/fonts/fa-brands-400.ttf") format("truetype");
 }
 .fab,
 .fa-brands {
@@ -29391,6 +29396,10 @@ readers do not read off random characters that represent icons */
   content: "\f6cc";
 }
 
+.fa-sketch:before {
+  content: "\f7c6";
+}
+
 .fa-yandex-international:before {
   content: "\f414";
 }
@@ -29682,7 +29691,7 @@ readers do not read off random characters that represent icons */
   font-style: normal;
   font-weight: 900;
   font-display: block;
-  src: url("/assets/fa-solid-900.woff2") format("woff2"), url("/assets/fa-solid-900.ttf") format("truetype");
+  src: url("/lcms-engine-assets/fonts/fa-solid-900.woff2") format("woff2"), url("/lcms-engine-assets/fonts/fa-solid-900.ttf") format("truetype");
 }
 .fas,
 .fa-solid {
@@ -29704,7 +29713,7 @@ readers do not read off random characters that represent icons */
   font-style: normal;
   font-weight: 400;
   font-display: block;
-  src: url("/assets/fa-regular-400.woff2") format("woff2"), url("/assets/fa-regular-400.ttf") format("truetype");
+  src: url("/lcms-engine-assets/fonts/fa-regular-400.woff2") format("woff2"), url("/lcms-engine-assets/fonts/fa-regular-400.ttf") format("truetype");
 }
 .far,
 .fa-regular {
