--- a/app/assets/stylesheets/lcms/engine/application.bootstrap.scss
+++ b/app/assets/stylesheets/lcms/engine/application.bootstrap.scss
@@ -2,7 +2,7 @@
 @import 'bootstrap-icons/font/bootstrap-icons';
 @import 'tom-select/dist/css/tom-select.bootstrap5.min';
 
-$fa-font-path: '/assets';
+$fa-font-path: '/lcms-engine-assets/fonts';
 @import '@fortawesome/fontawesome-free/scss/fontawesome';
 @import '@fortawesome/fontawesome-free/scss/brands';
 @import '@fortawesome/fontawesome-free/scss/solid';
