Correct delete button methods for various models
Added explicit :delete method to delete button code for Material, AccessCode, User, and Devise models. Ensures buttons correctly initiate delete operation in browsers that don't fully support the 'turbo-method' attribute.

--- a/app/views/lcms/engine/admin/access_codes/index.html.erb
+++ b/app/views/lcms/engine/admin/access_codes/index.html.erb
@@ -27,7 +27,7 @@
               <td><%= link_to access_code.code, lcms_engine.edit_admin_access_code_path(access_code) %>
               <td><%= access_code.active ? 'YES' : 'NO' %>
               <td>
-                <%= button_to t('ui.delete'), lcms_engine.admin_access_code_path(access_code), class: 'btn btn-danger', data: { confirm: t('ui.are_you_sure'), 'turbo-method': :delete }, form_class: 'inline' %>
+                <%= button_to t('ui.delete'), lcms_engine.admin_access_code_path(access_code), class: 'btn btn-danger', data: { confirm: t('ui.are_you_sure'), method: :delete, 'turbo-method': :delete }, form_class: 'inline', method: :delete %>
               </td>
             </tr>
           <% end %>
