--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -37,7 +37,7 @@
 
       <h3>Cancel my account</h3>
 
-      <p>Unhappy? <%= button_to 'Cancel my account', registration_path(resource_name), data: { confirm: 'Are you sure?', 'turbo-method': :delete } %></p>
+      <p>Unhappy? <%= button_to 'Cancel my account', registration_path(resource_name), data: { confirm: 'Are you sure?', 'turbo-method': :delete }, method: :delete %></p>
 
       <%= link_to "Back", :back %>
     </div>
