Remove unnecessary priority icon and metadata injection
This commit includes deletion of priority icons and forced injection of metadata in the code. The priority_icon method was used for displaying priority icons in the document which are no longer required, making this code redundant. Similarly, force_inject_section method was used for injecting the Section metadata only if there are no Agenda tables which is not needed anymore. The changes were also reflected in the html templates where priority_icon was used. So their references were also removed. These changes will help clean unnecessary code and improve readability.

--- a/lib/doc_template/templates/activity.html.erb
+++ b/lib/doc_template/templates/activity.html.erb
@@ -54,22 +54,7 @@
       <% if @tmpl[:activity].activity_standard.present? %>
         <p>
           <strong>Standards: </strong>
-          <% (standard_infos = @tmpl[:activity].activity_standard_info).each_with_index do |activity, idx| %>
-            <% id = "cg-k_#{SecureRandom.hex(4)}" %>
-            <span class="c-ld-keyword" data-toggle="<%= id %>"><%= activity[:standard] %></span><%= ',' if idx + 1 < standard_infos.size %>
-            <% if activity[:description] %>
-              <span class="dropdown-pane o-ld-dropdown"
-                    data-dropdown
-                    data-hover="true"
-                    data-hover-delay="0"
-                    data-hover-pane="true"
-                    data-v-offset="12"
-                    id="<%= id %>">
-                    <b><%= activity[:standard] %></b><br />
-                    <span><%= h activity[:description] %></span>
-              </span>
-            <% end %>
-          <% end %>
+          <span><%= @tmpl[:activity].activity_standard %></span>
         </p>
       <% end %>
     </div>
