Add async attribute to reimport forms
Added a hidden field to the 'Reimport' forms on both documents and materials admin pages. This change allows passing the 'async' flag to the server when a reimport is requested, giving administrators the ability to control whether import jobs are run synchronously or asynchronously. This functionality is crucial for managing server load in high-traffic periods.

--- a/app/views/lcms/engine/admin/materials/_reimport.html.erb
+++ b/app/views/lcms/engine/admin/materials/_reimport.html.erb
@@ -1,5 +1,6 @@
 <%= form_tag(lcms_engine.admin_materials_path, method: :post, target: '_blank', data: { turbo: false }) do %>
   <%= hidden_field_tag('material_form[source_type]', material.source_type) %>
   <%= hidden_field_tag('material_form[link]', material.file_url) %>
+  <%= hidden_field_tag('material_form[async]', local_assigns[:async].to_i) %>
   <%= submit_tag 'Reimport', class: local_assigns.fetch(:btn_class, 'btn btn-warning'), data: { disable_with: false } %>
 <% end %>
