--- a/app/views/lcms/engine/admin/documents/_reimport.html.erb
+++ b/app/views/lcms/engine/admin/documents/_reimport.html.erb
@@ -1,5 +1,6 @@
 <%= form_tag(lcms_engine.admin_documents_path, method: :post, target: '_blank', data: { turbo: false }) do %>
   <%= hidden_field_tag('document_form[link]', lesson.file_url) %>
   <%= hidden_field_tag('document_form[with_materials]', 0, class: 'c-reimport-with-materials__field') %>
+  <%= hidden_field_tag('document_form[async]', local_assigns[:async].to_i) %>
   <%= submit_tag 'Reimport', class: local_assigns.fetch(:btn_class, 'btn btn-warning'), data: { disable_with: false } %>
 <% end %>
