--- a/app/views/lcms/engine/admin/batch_reimports/import.html.erb
+++ b/app/views/lcms/engine/admin/batch_reimports/import.html.erb
@@ -1,15 +1,14 @@
 <% set_page_title 'Batch Import' %>
-
 <div class="container-fluid">
   <h2 class="text-center p-4">Batch Re-import resources</h2>
   <hr>
   <div class="row">
-    <div class="cols-sm">
+    <div class="col-sm">
       <%= link_to 'Back', lcms_engine.new_admin_batch_reimport_path(query: @query.to_h), class: 'btn btn-success' %>
     </div>
   </div>
   <hr>
-  <div class="row p-2">
+  <div class="row py-2">
     <div class="col">
       <%= render_component('ImportStatus', @props) %>
     </div>
