--- a/app/views/lcms/engine/admin/access_codes/edit.html.erb
+++ b/app/views/lcms/engine/admin/access_codes/edit.html.erb
@@ -1,17 +1,12 @@
 <div class="container-fluid">
   <h2 class="text-center"><%= t('.page_title') %></h2>
-
   <% set_page_title t('.page_title') %>
-
   <hr>
-
-  <div class="cols-sm">
+  <div class="col-sm">
     <%= link_to 'Back to list', lcms_engine.admin_access_codes_path,
                 class: 'btn btn-success' %>
   </div>
-
   <hr>
-
   <div class="row">
     <%= render 'form' %>
   </div>
