--- a/app/views/lcms/engine/admin/documents/new.html.erb
+++ b/app/views/lcms/engine/admin/documents/new.html.erb
@@ -1,7 +1,7 @@
 <div class="container-fluid">
   <h2 class="text-center p-4"><%= t('.page_title') %></h2>
   <hr>
-  <div class="cols-sm">
+  <div class="col-sm">
     <%= link_to 'Back to list', lcms_engine.admin_documents_path, class: 'btn btn-success' %>
   </div>
   <hr>
@@ -10,9 +10,9 @@
       <%= f.input :link, error: f.object.errors[:link].first.try(:html_safe),
                   label: false, placeholder: t('ui.url') %>
       <p>
-      <%= f.check_box :async,
+        <%= f.check_box :async,
                       checked: params.dig(:document_form, :async).nil? || params.dig(:document_form, :async).to_i.positive? %>
-      <span><small><%= t('ui.async') %></small></span>
+        <span><small><%= t('ui.async') %></small></span>
       </p>
       <%= f.button :submit, t('.submit'), class: 'btn btn-primary' %>
     <% end %>
