--- a/app/views/lcms/engine/admin/materials/new.html.erb
+++ b/app/views/lcms/engine/admin/materials/new.html.erb
@@ -1,21 +1,21 @@
 <div class="container-fluid">
   <h2 class="text-center p-4"><%= t('.page_header', type: @material_form.source_type) %></h2>
   <hr>
-  <div class="cols-sm">
+  <div class="col-sm">
     <%= link_to 'Back to list', lcms_engine.admin_materials_path, class: 'btn btn-success' %>
   </div>
   <hr>
-    <div class="row">
-      <%= simple_form_for @material_form || MaterialForm.new, url: lcms_engine.admin_materials_path, data: { turbo: false } do |f| %>
-        <%= f.hidden_field :source_type, value: @material_form.source_type %>
-        <%= f.input :link, error: f.object.errors[:link].first.try(:html_safe),
+  <div class="row">
+    <%= simple_form_for @material_form || MaterialForm.new, url: lcms_engine.admin_materials_path, data: { turbo: false } do |f| %>
+      <%= f.hidden_field :source_type, value: @material_form.source_type %>
+      <%= f.input :link, error: f.object.errors[:link].first.try(:html_safe),
                     label: false, placeholder: t('ui.url') %>
-        <p>
-          <%= f.check_box :async,
+      <p>
+        <%= f.check_box :async,
                           checked: params.dig(:material_form, :async).nil? || params.dig(:material_form, :async).to_i.positive? %>
-          <span><small><%= t('ui.async') %></small></span>
-        </p>
-        <%= f.button :submit, t('.submit'), class: 'btn btn-primary' %>
-      <% end %>
-    </div>
+        <span><small><%= t('ui.async') %></small></span>
+      </p>
+      <%= f.button :submit, t('.submit'), class: 'btn btn-primary' %>
+    <% end %>
+  </div>
 </div>
