--- a/app/views/lcms/engine/admin/standards/edit.html.erb
+++ b/app/views/lcms/engine/admin/standards/edit.html.erb
@@ -1,17 +1,11 @@
 <% title = t('.page_title') %>
-
 <% set_page_title title %>
-
 <div class="container-fluid">
   <h2 class=text-center><%= title %></h2>
-
   <hr>
-
-  <div class="cols-sm">
+  <div class="col-sm">
     <%= link_to 'Back to list', lcms_engine.admin_standards_path, class: 'btn btn-success' %>
   </div>
-
   <hr>
-
   <%= render 'form' %>
 </div>
