--- a/app/views/lcms/engine/admin/users/new.html.erb
+++ b/app/views/lcms/engine/admin/users/new.html.erb
@@ -1,14 +1,10 @@
 <div class="container-fluid">
   <h2 class=text-center><%= t('.page_title') %></h2>
-
   <hr>
-
-  <div class="cols-sm">
+  <div class="col-sm">
     <%= link_to 'Back to list', lcms_engine.admin_users_path, class: 'btn btn-success' %>
   </div>
-
   <hr>
-
   <div class="row">
     <%= render 'form' %>
   </div>
