Modify handling of flash messages in Lcms::Engine
Two constants, FLASH_MESSAGE_MAX_CHAR and FLASH_REDIS_PREFIX, are added in Engine module. The flash partial has been updated to handle flash messages differently, checking first if the message originates from Redis or not.

Also, this refactor includes the deletion of engine.rbs under models,
moving its contents to engine.rbs under lib.

--- a/app/views/lcms/engine/shared/_flash.html.erb
+++ b/app/views/lcms/engine/shared/_flash.html.erb
@@ -1,8 +1,12 @@
 <% flash.to_hash.slice('alert', 'notice').each do |name, message| %>
   <% if message.present? %>
     <% css_class = name == 'alert' ? 'alert-danger' : 'alert-success' %>
-    <div class="alert alert-dismissible fade show <%= css_class %>" role="alert">
-      <%= raw message %>
+    <div class="alert alert-dismissible fade show <%= css_class %> text-break" role="alert">
+      <% if message.start_with?(Lcms::Engine::FLASH_REDIS_PREFIX) %>
+        <%= raw Rails.application.config.redis&.get(message).presence || "Message is inside Redis: #{message}" %>
+      <% else %>
+        <%= raw message %>
+      <% end %>
       <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
     </div>
   <% end %>
