Refactor material filtering logic and search form
Updated the material filtering logic to support multiple grade values. Added a value transformation method for orientation in the search form. Removed 'grade' from strict metadata and replaced it with 'grades' to accommodate multi-value inputs.

--- a/app/views/lcms/engine/admin/materials/_search_form.html.erb
+++ b/app/views/lcms/engine/admin/materials/_search_form.html.erb
@@ -11,7 +11,8 @@
                   as: :select,
                   include_blank: true,
                   collection: %w(landscape portrait),
-                  label_method: :upcase %>
+                  label_method: :upcase,
+                  value_method: ->(val) { val[0].downcase } %>
     </div>
     <div class="col">
       <%= f.input :name_date, label: 'Name Date',
