[BREAKING] Refactor query handling in admin controllers
Possibly can break the inherited controllers. Apply changes carefully.

Unified query handling by extracting common query logic into `Lcms::Engine::Queryable` concern. Updated controllers and views to use the new concern for setting query parameters and constructing query structs, improving code maintainability and reducing redundancy.

This allows us to get rid of OpenStruct usage completely.

--- a/app/views/lcms/engine/admin/batch_reimports/_search_form.html.erb
+++ b/app/views/lcms/engine/admin/batch_reimports/_search_form.html.erb
@@ -5,7 +5,7 @@
                   collection: Lcms::Engine::Resource::SUBJECTS, label_method: :humanize %>
     </div>
     <div class="col">
-      <%= f.input :grades, collection: Lcms::Engine::Grades.grades,
+      <%= f.input :grade, collection: Lcms::Engine::Grades.grades,
                   label: 'Grade', label_method: :humanize, required: false, wrapper: false %>
     </div>
     <div class="col">
