Update controllers and views to include query parameters in redirects
Added query parameters to redirection paths in both documents and materials controllers, ensuring consistent parameter passing. Also updated the corresponding views to maintain query parameters in navigation links, improving user navigation and state retention.

--- a/app/views/lcms/engine/admin/documents/_reimport.html.erb
+++ b/app/views/lcms/engine/admin/documents/_reimport.html.erb
@@ -1,4 +1,4 @@
-<%= form_tag(lcms_engine.admin_documents_path, method: :post, target: '_blank', data: { turbo: false }) do %>
+<%= form_tag(lcms_engine.admin_documents_path(query: local_assigns.fetch(:query, {})), method: :post, target: '_blank', data: { turbo: false }) do %>
   <%= hidden_field_tag('document_form[link]', lesson.file_url) %>
   <%= hidden_field_tag('document_form[with_materials]', 0, class: 'c-reimport-with-materials__field') %>
   <%= hidden_field_tag('document_form[async]', local_assigns[:async].to_i) %>
