--- a/app/views/lcms/engine/admin/materials/import.html.erb
+++ b/app/views/lcms/engine/admin/materials/import.html.erb
@@ -4,7 +4,7 @@
   <hr>
   <div class="row">
     <div class="col-sm">
-      <%= link_to 'Back to list', lcms_engine.admin_materials_path, class: 'btn btn-success' %>
+      <%= link_to 'Back to list', lcms_engine.admin_materials_path(query: @query_params), class: 'btn btn-success' %>
     </div>
   </div>
   <hr>
