--- a/app/views/lcms/engine/admin/documents/index.html.erb
+++ b/app/views/lcms/engine/admin/documents/index.html.erb
@@ -15,7 +15,7 @@
       <span class="c-reimport-with-materials__toggle"><%= check_box_tag 'reimport_with_materials', 1 %> Reimport with Materials</span>
     </div>
     <div class="col-sm-2">
-      <%= link_to t('.new_lesson'), lcms_engine.new_admin_document_path, class: 'btn btn-primary m-1' %>
+      <%= link_to t('.new_lesson'), lcms_engine.new_admin_document_path(query: @query_params), class: 'btn btn-primary m-1' %>
     </div>
     <div class="col-sm-2">
       <%= render_component 'MultiSelectedOperation', {
@@ -76,8 +76,8 @@
             <% end %>
           </td>
           <td class="lessons-table__btns">
-            <%= render partial: 'lcms/engine/admin/documents/reimport', locals: { btn_class: 'btn btn-warning btn-sm m-1', lesson: lesson } %>
-            <%= link_to t('ui.delete'), lcms_engine.admin_document_path(lesson), class: 'btn btn-danger btn-sm m-1', data: { confirm: t('ui.are_you_sure'), 'turbo-method': :delete } %>
+            <%= render partial: 'lcms/engine/admin/documents/reimport', locals: { btn_class: 'btn btn-warning btn-sm m-1', lesson: lesson, query: @query_params } %>
+            <%= link_to t('ui.delete'), lcms_engine.admin_document_path(lesson, query: @query_params), class: 'btn btn-danger btn-sm m-1', data: { confirm: t('ui.are_you_sure'), 'turbo-method': :delete } %>
           </td>
         </tr>
         <% end %>
