--- a/app/views/lcms/engine/admin/materials/_reimport.html.erb
+++ b/app/views/lcms/engine/admin/materials/_reimport.html.erb
@@ -1,4 +1,4 @@
-<%= form_tag(lcms_engine.admin_materials_path, method: :post, target: '_blank', data: { turbo: false }) do %>
+<%= form_tag(lcms_engine.admin_materials_path(query: local_assigns.fetch(:query, {})), method: :post, target: '_blank', data: { turbo: false }) do %>
   <%= hidden_field_tag('material_form[source_type]', material.source_type) %>
   <%= hidden_field_tag('material_form[link]', material.file_url) %>
   <%= hidden_field_tag('material_form[async]', local_assigns[:async].to_i) %>
