--- a/app/views/lcms/engine/admin/materials/new.html.erb
+++ b/app/views/lcms/engine/admin/materials/new.html.erb
@@ -2,7 +2,7 @@
   <h2 class="text-center p-4"><%= t('.page_header', type: @material_form.source_type) %></h2>
   <hr>
   <div class="col-sm">
-    <%= link_to 'Back to list', lcms_engine.admin_materials_path, class: 'btn btn-success' %>
+    <%= link_to 'Back to list', lcms_engine.admin_materials_path(query: @query_params), class: 'btn btn-success' %>
   </div>
   <hr>
   <div class="row">
